--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -1,6 +1,8 @@
 version: v1
 deps:
-  - buf.build/noble/cosmos-sdk:v0.47.3
+  - buf.build/cosmos/cosmos-sdk:2aa7ff2b23df473a85b7a7fe1884105d
+  - buf.build/cosmos/gogo-proto
+  - buf.build/googleapis/googleapis
 breaking:
   use:
     - FILE
